fix bug cutting off bottom f project tiles.

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ p {
 img {
   max-height: 500px;
 }
+
+.title {
+  padding-bottom: 5px;
+}
 .profile-pic {
   box-shadow: 0px 4px 6px 2px lightgrey;
   border-radius: 50%
